# web-scraper

./: README.md  pyproject.toml  scraper.py
tests/: scraper_test.py
