[tool.poetry]
name = "webscrapper"
version = "0.1.0"
description = ""
authors = ["Chris Rarig <cwrarig20@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
pytest = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
